--- a/style.css
+++ b/style.css
@@ -212,6 +212,14 @@ footer a{
           width: 80%;
           height: auto;
 }
+	#body-img{
+	width: 100%;
+	height: 70vh;
+}
+#overlay{
+	width: 100%;
+	height: 70vh;
+}
 #serv{
 	border: none;
 	border-radius: 4px 4px;
