--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 	font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 main h1{
 	color: royalblue;
